Bug 300317 - No favicon in bookmarks page with Webkit
Summary: No favicon in bookmarks page with Webkit
Status: RESOLVED FIXED
Alias: None
Product: kwebkitpart
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: webkit-bugs-null
URL: bookmarks:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-19 14:24 UTC by ariasuni
Modified: 2012-09-05 21:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ariasuni 2012-05-19 14:24:24 UTC
With Webkit, "bookmarks:" gives the bookmarks page with no favicon and no background.
But "bookmarks:/" works well, so the solution is very simple.
The introduction page link is "bookmarks:/", but if you set "Show My Bookmarks" at "When Konqueror Starts", We go to "bookmarks:".

Reproducible: Always

Steps to Reproduce:
1. Set Webkit as the principal engine
2. Set "Show My Bookmarks" at "When Konqueror Starts" (first option)
3. Restart Konqueror
Actual Results:  
No favicon and no background at the bookmarks page.

Expected Results:  
Open "bookmarks:/" instead.
Comment 1 Dawit Alemayehu 2012-05-21 19:37:15 UTC
Git commit 35e1dad9579e2538b8e9ccdcd3b16d1f36903b02 by Dawit Alemayehu.
Committed on 21/05/2012 at 18:14.
Pushed by adawit into branch 'master'.

Properly handle openUrl requests when the URL entered is a local URL without
a path, e.g. bookmark:
FIXED-IN: trunk (future version)

M  +12   -1    src/kwebkitpart.cpp

http://commits.kde.org/kwebkitpart/35e1dad9579e2538b8e9ccdcd3b16d1f36903b02