Properly handle openUrl requests when the URL entered is a local URL without a path, e.g. bookmark:

BUG: 300317
FIXED-IN: trunk (future version)